# manim-sequence-diagram

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
docs/: examples.py
src/manim_sequence_diagram/: __init__.py  constants.py  seq_action.py  seq_actor.py  seq_object.py
